enhance: `delegatedadministration`: updating naming for `FetchExistingDelegatesList`
